build upnp plugin
Change-Id: I486b46d7bf848ef42e1d64bca1c8349599a5b894